2004-09-19  Miguel de Icaza  <miguel@ximian.com>

	* ecore.cs: Removed dead code.

2004-09-18  Marek Safar  <marek.safar@seznam.cz>

	* class.cs: Do not report warning CS0067 on the interfaces.

2004-09-16  Marek Safar  <marek.safar@seznam.cz>

	* cs-parser.jay: Add error 504 report.

2004-09-16  Marek Safar  <marek.safar@seznam.cz>

	* rootcontext.cs: WarningLevel is 4 by default now.

	* statement.cs (Fixed.Resolve): Do not null
	VariableInfo.

2004-09-16  Marek Safar  <marek.safar@seznam.cz>

	Fixed bug #55780
	* ecore.cs (PropertyExpr.FindAccessors): Do not perform
	deep search when property is not virtual.
	(PropertyExpr.ResolveAccessors): Make one call for both
	accessors.

2004-09-15  Marek Safar  <marek.safar@seznam.cz>

	Fixed bug #65766
	* statement.cs: Error 152 report constains also location.

2004-09-15  Marek Safar  <marek.safar@seznam.cz>

	Fixed bug #65766
	* const.cs: Explicitly set constant as static.

2004-09-15  Marek Safar  <marek.safar@seznam.cz>

	Fixed bug #64226
	* cs-parser.jay: Add error 1017 report.

2004-09-15  Marek Safar  <marek.safar@seznam.cz>

	Fixed bug #59980, #64224
	* expression.cs (Invocation.DoResolve): Fixed error CS0571 test.

	* typemanager.cs (IsSpecialMethod): Simplified

2004-09-14  Marek Safar  <marek.safar@seznam.cz>

	* decl.cs (MemberCore.Emit): Resuscitated VerifyObsoleteAttribute
	condition with better params.

2004-09-14  Marek Safar  <marek.safar@seznam.cz>

	Fixed bug #65238
	* attribute.cs (Resolve): Property has to have both
	accessors.

2004-09-14  Martin Baulig  <martin@ximian.com>

	Merged latest changes into gmcs.  Please keep this comment in
	here, it makes it easier for me to see what changed in MCS since
	the last time I merged.

2004-09-14  Martin Baulig  <martin@ximian.com>

	* decl.cs (MemberCore.Emit): Always call VerifyObsoleteAttribute().

2004-09-14  Marek Safar  <marek.safar@seznam.cz>

	Fixed bug #61902
	* codegen.cs (TestObsoleteMethodUsage): Trace when method is